# Simvoice

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  flake.nix  run.sh
include/: voicevox_core.h
migrations/: 001_initial.sql  002_features.sql
scripts/: benchmark.sh  load_test.sh  sanitizer_check.sh
src/: main.cpp
src/audio/: cache.cpp  cache.hpp  pipeline.cpp  pipeline.hpp
src/bot/: handler.cpp  handler.hpp
src/bot/commands/: dict.cpp  dict.hpp  join.cpp  join.hpp  settings.cpp  settings.hpp  stats.cpp  stats.hpp  voice.cpp  voice.hpp
src/config/: config.cpp  config.hpp
src/db/: database.cpp  database.hpp
src/guild/: queue.cpp  queue.hpp  state.cpp  state.hpp
src/metrics/: metrics.cpp  metrics.hpp
src/tts/: interface.hpp  preprocessor.cpp  preprocessor.hpp  sentence_splitter.cpp  sentence_splitter.hpp  synthesizer.cpp  synthesizer.hpp  voicevox.cpp  voicevox.hpp  warmup.cpp  warmup.hpp
tests/: test_cache.cpp  test_preprocessor.cpp  test_queue.cpp  test_sentence_splitter.cpp
